force-app/main/default/objects/MDR_Data_Element__c/MDR_Data_Element__c.object-meta.xml
<CustomObject>
    <label>Data Element</label>
    <nameField>
        <label>Data Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>