force-app/main/default/objects/MDR_Data_Element__c/fields/Data_Quality__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality__c</fullName>
    <defaultValue>&apos;Unknown&apos;</defaultValue>
    <label>Data Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Depreciate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>