force-app/main/default/objects/MDR_Data_Element__c/fields/Derivation__c.field-meta.xml
<CustomField>
    <fullName>Derivation__c</fullName>
    <label>Derivation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>