force-app/main/default/objects/MDR_Data_Element__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>PSLP</fullName>
            </value>
            <value>
                <fullName>Exposure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>