force-app/main/default/objects/MDR_Data_Element__c/fields/Instance_Count__c.field-meta.xml
<CustomField>
    <fullName>Instance_Count__c</fullName>
    <label>Instance Count</label>
    <summaryForeignKey>MDR_Data_Element_Instance__c.Data_Element__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>