force-app/main/default/objects/MDR_Data_Element__c/fields/Is_Child__c.field-meta.xml
<CustomField>
    <fullName>Is_Child__c</fullName>
    <formula>Parent__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Child</label>
    <type>Checkbox</type>
</CustomField>