force-app/main/default/objects/MDR_Data_Element__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>MDR_Data_Element__c</referenceTo>
    <relationshipLabel>Child Data Elements</relationshipLabel>
    <relationshipName>Data_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>