force-app/main/default/objects/MDR_Data_Element__c/fields/Primary_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Primary_Purpose__c</fullName>
    <label>Primary Purpose</label>
    <type>TextArea</type>
</CustomField>