force-app/main/default/objects/MDR_Data_Element__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>&apos;Low&apos;</defaultValue>
    <label>Reporting Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Depreciate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>