force-app/main/default/objects/MDR_Data_Element__c/fields/RDI_Certified__c.field-meta.xml
<CustomField>
    <fullName>RDI_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RDI Certified</label>
    <type>Checkbox</type>
</CustomField>