force-app/main/default/objects/MDR_Data_Element__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>Domain__c</columns>
    <columns>Instance_Count__c</columns>
    <columns>Description__c</columns>
    <columns>Data_Quality__c</columns>
    <columns>RDI_Certified__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>