force-app/main/default/objects/MDR_Data_Element__c/listViews/No_Parents.listView-meta.xml
<ListView>
    <fullName>No_Parents</fullName>
    <columns>NAME</columns>
    <columns>Instance_Count__c</columns>
    <columns>Description__c</columns>
    <columns>RDI_Certified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Child__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Don&apos;t Show Children</label>
</ListView>