force-app/main/default/objects/MDR_Data_Element__c/listViews/Uncertified.listView-meta.xml
<ListView>
    <fullName>Uncertified</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>Instance_Count__c</columns>
    <columns>Description__c</columns>
    <columns>Data_Quality__c</columns>
    <columns>RDI_Certified__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RDI_Certified__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Uncertified</label>
</ListView>